# cpp-practice

hw01/: hw01_2  hw01test_2  library.h
hw02/: CMakeLists.txt  combinatorics.cpp  run.cpp
hw03/: contact_list.cpp
hw04/: vm.cpp  vm.h
hw05/: CMakeLists.txt  token.h  validator.cpp  validator.h
hw06/: vector.cpp  vector.h
hw07/: client.cpp  client.h  connection.cpp  connection.h  filedescriptor.cpp  filedescriptor.h  server.cpp  server.h  socket.cpp  socket.h
hw08/: audio.cpp  audio.h  document.cpp  file.cpp  file.h  filecontent.cpp  filecontent.h  filesystem.cpp  filesystem.h  image.cpp  video.cpp
hw09/: vector.cpp  vector.h
hw10/: bencode.h  primes.h  quadruple.h
hw11/: constexprmap.h
hw12/: logger.cpp  logger.h  monitor.cpp  monitor.h
tests/: CMakeLists.txt
tests/hw02/: CMakeLists.txt  test02.cpp
